--- a/_action_files/settings.ini
+++ b/_action_files/settings.ini
@@ -7,7 +7,8 @@ description = Writing a library entirely in notebooks
 keywords = jupyter notebook
 author = Sylvain Gugger and Jeremy Howard
 author_email = info@fast.ai
-baseurl = /DataScienceBlog
+baseurl = /
+; baseurl = /DataScienceBlog
 title = nbdev
 copyright = fast.ai
 license = apache2
