--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ baseurl: "/DataScienceBlog" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: fastdotai
-    github: fastai
+    github: https://github.com/xubujie/DataScienceBlog
 
 # Set this to true to get LaTeX math equation support
 use_math: true
@@ -94,7 +94,7 @@ plugins:
 
 # See https://jekyllrb.com/docs/pagination/
 # For pagination to work, you cannot have index.md at the root of your repo, instead you must rename this file to index.html
-paginate: 15
+paginate: 10
 paginate_path: /page:num/
 
 remote_theme: jekyll/minima
