--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ baseurl: "/DataScienceBlog" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: fastdotai
-    github: xubujie/DataScienceBlog
+    github: fastpages
 
 # Set this to true to get LaTeX math equation support
 use_math: true
